Redundant code removed